[gd_scene load_steps=22 format=2]

[ext_resource path="res://characters/Player/kiko1.png" type="Texture" id=1]
[ext_resource path="res://characters/Player/player.gd" type="Script" id=2]
[ext_resource path="res://characters/Player/aim/shoot.gd" type="Script" id=3]
[ext_resource path="res://characters/Player/aim/armadokiko.png" type="Texture" id=4]
[ext_resource path="res://Global/scripts/Global.gd" type="Script" id=5]
[ext_resource path="res://audio/gunshot.mp3" type="AudioStream" id=6]
[ext_resource path="res://characters/Player/pos.gd" type="Script" id=7]
[ext_resource path="res://characters/Player/light.tscn" type="PackedScene" id=8]
[ext_resource path="res://material/unshaded.tres" type="Material" id=9]
[ext_resource path="res://material/hp.tres" type="Theme" id=10]
[ext_resource path="res://fonts/Blacknorthdemo-mLE25.otf" type="DynamicFontData" id=11]
[ext_resource path="res://characters/Player/aim/aim.tscn" type="PackedScene" id=12]

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 32 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="DynamicFont" id=6]
size = 14
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 14
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=8]
size = 14
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=9]
size = 14
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="player" type="KinematicBody2D" groups=["player"]]
modulate = Color( 0.67451, 0.67451, 0.67451, 1 )
show_behind_parent = true
material = ExtResource( 9 )
z_index = 1
collision_layer = 25
collision_mask = 25
collision/safe_margin = 1.0
script = ExtResource( 2 )

[node name="light" parent="." instance=ExtResource( 8 )]
scale = Vector2( 2, 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 17
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="shoot" type="Node2D" parent="."]
material = SubResource( 3 )
script = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="shoot"]
material = SubResource( 4 )
position = Vector2( 16, 0 )
scale = Vector2( 2, 2 )
z_index = 4096
texture = ExtResource( 4 )

[node name="sound" type="AudioStreamPlayer" parent="shoot"]
stream = ExtResource( 6 )
volume_db = -15.0

[node name="Timer" type="Timer" parent="shoot"]
wait_time = 0.1
autostart = true

[node name="Global" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="pos" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="hit" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="kill counter" type="RichTextLabel" parent="."]
material = ExtResource( 9 )
margin_left = -384.0
margin_top = -232.0
margin_right = -320.0
margin_bottom = -216.0
custom_fonts/normal_font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="kill" type="RichTextLabel" parent="."]
material = ExtResource( 9 )
margin_left = -448.0
margin_top = -232.0
margin_right = -408.0
margin_bottom = -216.0
custom_fonts/normal_font = SubResource( 7 )
text = "kills:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="key_counter" type="RichTextLabel" parent="."]
material = ExtResource( 9 )
margin_left = -448.0
margin_top = -216.0
margin_right = -416.0
margin_bottom = -200.0
custom_fonts/normal_font = SubResource( 8 )
text = "KEY:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
material = ExtResource( 9 )
margin_left = -384.0
margin_top = -216.0
margin_right = -320.0
margin_bottom = -200.0
custom_fonts/normal_font = SubResource( 9 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="aim" parent="." instance=ExtResource( 12 )]
position = Vector2( 64, 0 )

[node name="hp" type="ProgressBar" parent="."]
material = ExtResource( 9 )
margin_left = -448.0
margin_top = -256.0
margin_right = -280.0
margin_bottom = -238.0
theme = ExtResource( 10 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="shoot/Timer" to="shoot" method="_on_Timer_timeout"]
[connection signal="timeout" from="hit" to="." method="_on_hit_timeout"]
